--- a/panel/index.html
+++ b/panel/index.html
@@ -724,13 +724,13 @@
                             content: message
                         }],
                         conversation_id: currentConversationId || undefined,
-                        model: "gpt-3.5-turbo",
-                        max_length: 16000,
-                        max_tokens: 100,
-                        temperature: 0.1,
-                        top_k: 50,
-                        top_p: 0.95,
-                        repetition_penalty: 1.1,
+                        model: "cognitivecomputations/dolphin-2.9.2-qwen2-72b",
+                        max_length: 32768,
+                        max_tokens: 4096,
+                        temperature: 0.7,
+                        top_k: 40,
+                        top_p: 0.9,
+                        repetition_penalty: 1.15,
                         do_sample: true,
                         truncation: true
                     })
@@ -947,11 +947,13 @@
                 var messages = await response.json();
                 messages = messages.messages;
 
-                chatMessages.innerHTML = messages.map(msg => `
-                    <div class="message ${msg.role}">
-                        ${escapeHtml(msg.content)}
-                    </div>
-                `).join('');
+                chatMessages.innerHTML = messages
+                    .filter(msg => msg.role !== 'system') // Filter out system messages
+                    .map(msg => `
+                        <div class="message ${msg.role}">
+                            ${escapeHtml(msg.content)}
+                        </div>
+                    `).join('');
 
                 chatMessages.scrollTop = chatMessages.scrollHeight;
 
